tidying up html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-GB">
 
@@ -44,38 +43,45 @@
         </div><!-- /#header -->
       </div><!-- /.container -->
     </section>
+
   </div><!-- /.jumbotron -->
 
+  <div class="container">
 
     <section id="buttons">
       <div class="row">
 
-      <div class="col-md-4">
-    <div class="container button">
+        <div class="col-md-4">
 
-    <img class="img-fluid" src="images/rock.jpg" alt="Cartoon style rock."/>
-    <button class="btn" id="rock" value="rock">Rock</button>
-    </div>
-    </div>
+          <div class="container button">
+            <img class="img-fluid" src="images/rock.jpg" alt="Cartoon style rock." />
+            <button class="btn" id="rock" value="rock">Rock</button>
+          </div>
 
-<div class="col-md-4">
-    <div class="container button">
+        </div>
 
-    <img class="img-fluid" src="images/paper.jpg" alt="Cartoon piece of lined holed paper."/>
-    <button class="btn" id="paper" value="paper">Paper</button>
-    </div>
-    </div>
+        <div class="col-md-4">
 
-      <div class="col-md-4">
-    <div class="container button">
+          <div class="container button">
+            <img class="img-fluid" src="images/paper.jpg" alt="Cartoon piece of lined holed paper." />
+            <button class="btn" id="paper" value="paper">Paper</button>
+          </div>
 
-    <img class="img-fluid" src="images/scissors.jpg" alt="Cartoon style scissors."/>
-    <button class="btn" id="scissors" value="scissors">Scissors</button>
-    </div>
-    </div>
+        </div>
 
-</div>
+        <div class="col-md-4">
+
+          <div class="container button">
+            <img class="img-fluid" src="images/scissors.jpg" alt="Cartoon style scissors." />
+            <button class="btn" id="scissors" value="scissors">Scissors</button>
+          </div>
+
+        </div>
+
+      </div><!-- /#buttons .row -->
     </section><!-- /#buttons -->
+
+  </div><!-- /.container -->
 
   <div class="container-fluid text-center">
     <section id="results">
@@ -90,8 +96,8 @@
           <div class="col-md-6">
             <p>The machine played: <span id="play_machine"></span></p>
           </div>
-        </div>
-      </div>
+        </div><!-- /.row -->
+      </div><!-- .container -->
 
       <button id="play-again">Play again</button>
 
@@ -106,9 +112,10 @@
       </ul>
     </section><!-- /#statistics -->
 
+  </div><!-- /.container-fluid text-center -->
+
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/engine.js"></script>
-  </div><!-- /.container-fluid text-center -->
 
 </body>
 
